--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-    <header class="py-5">
+    <header class="py-5 mt-4">
         <div class="container px-lg-5">
             <div class="p-4 p-lg-5 custom-card text-center position-relative">
                 <div class="m-4 m-lg-5">
