--- a/assets/styles/custom-cards.scss
+++ b/assets/styles/custom-cards.scss
@@ -43,7 +43,7 @@
   &.active {
     padding: 1em;
     left: calc(100% - 550px);
-    width: 350px;
+    width: 380px;
   }
   &-positions {
     display: flex;
@@ -75,11 +75,12 @@
     align-items: center;
     top: 20%;
     left: -5%;
-    color: #FFF;
     width: 5em;
     height: 5em;
     border-radius: 6px;
     & > i {
+      opacity: 0.5;
+      color: #f1f2f3;
       font-size: 2.5em;
     }
     &--orange {
