--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -3,6 +3,7 @@ $enable-negative-margins: true;
 $enable-responsive-font-sizes: true;
 
 @import '~bootstrap/scss/bootstrap';
+@import 'custom-components';
 @import 'table.scss';
 @import 'custom-cards';
 
