--- a/assets/styles/custom-components.scss
+++ b/assets/styles/custom-components.scss
@@ -1,7 +1,10 @@
 .wrap-icon {
-  display: inline-block;
-  width: 2em;
-  height: 2em;
   border-radius: 2em;
   background-color: #0d6efd;
+  transition: background-color 0.3s;
+}
+
+.wrap-icon:hover {
+  background-color: darken(#0d6efd, 5%);
+  transition: background-color 0.3s;
 }
