--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -1,5 +1,5 @@
 <!-- Responsive navbar-->
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary bg-gradient mb-1">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-1">
     <div class="container px-lg-5">
         <a class="navbar-brand" href="{{ path("app_home") }}">Webtrader</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -9,9 +9,9 @@
                 <li class="nav-item"><a class="nav-link" href="{{ path("app_dashboard") }}">dashboard</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
                 {% if app.user %}
-                    <li class="nav-item"><a class="nav-link px-lg-4" href="{{ path("app_logout") }}"><span class="wrap-icon"><i class="bi bi-person-circle pe-2 p-lg-2"></i></span>Se déconnecter</a></li>
+                    <li class="nav-item"><a class="nav-link px-lg-4" href="{{ path("app_logout") }}"><i class="bi bi-person-circle pe-2 p-lg-2 wrap-icon"></i>Se déconnecter</a></li>
                 {% else %}
-                    <li class="nav-item"><a class="nav-link px-lg-4" href="{{ path("app_login") }}"><i class="bi bi-person-circle pe-2 p-lg-2"></i>Se connecter</a></li>
+                    <li class="nav-item"><a class="nav-link px-lg-4" href="{{ path("app_login") }}"><i class="bi bi-person-circle pe-2 p-lg-2 wrap-icon"></i>Se connecter</a></li>
                 {% endif %}
             </ul>
         </div>
