--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,7 +30,9 @@
     <body class="d-flex flex-column h-100">
         {% include 'header.html.twig' %}
 
+        <main>
         {% block body %}{% endblock %}
+        </main>
 
         {% include 'footer.html.twig' %}
     </body>
