--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -1,19 +1,22 @@
 <!-- Responsive navbar-->
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-1">
-    <div class="container px-lg-5">
-        <a class="navbar-brand" href="{{ path("app_home") }}">Webtrader</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item"><a class="nav-link" aria-current="page" href="{{ path("app_home") }}">Accueil</a></li>
-                <li class="nav-item"><a class="nav-link" href="{{ path("app_dashboard") }}">dashboard</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-                {% if app.user %}
-                    <li class="nav-item"><a class="nav-link px-lg-4" href="{{ path("app_logout") }}"><i class="bi bi-person-circle pe-2 p-lg-2 wrap-icon"></i>Se déconnecter</a></li>
-                {% else %}
-                    <li class="nav-item"><a class="nav-link px-lg-4" href="{{ path("app_login") }}"><i class="bi bi-person-circle pe-2 p-lg-2 wrap-icon"></i>Se connecter</a></li>
-                {% endif %}
-            </ul>
+<!-- menu navbar placé dans un header pour améliorer le SEO qui prend en compte la sémantique -->
+<header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-1">
+        <div class="container px-lg-5">
+            <a class="navbar-brand" href="{{ path("app_home") }}">Webtrader</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                    <li class="nav-item"><a class="nav-link" aria-current="page" href="{{ path("app_home") }}">Accueil</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ path("app_dashboard") }}">dashboard</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                    {% if app.user %}
+                        <li class="nav-item"><a class="nav-link px-lg-4" href="{{ path("app_logout") }}"><i class="bi bi-person-circle pe-2 p-lg-2 wrap-icon"></i>Se déconnecter</a></li>
+                    {% else %}
+                        <li class="nav-item"><a class="nav-link px-lg-4" href="{{ path("app_login") }}"><i class="bi bi-person-circle pe-2 p-lg-2 wrap-icon"></i>Se connecter</a></li>
+                    {% endif %}
+                </ul>
+            </div>
         </div>
-    </div>
-</nav>
+    </nav>
+</header>
