--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -52,7 +52,7 @@
         </div>
     </section>
     <section>
-        <article class="CAC">
+        <article class="CAC transparent-bg">
             <div class="container p-4 p-lg-5 px-lg-5 custom-card text-center" id="CAC">
                 <h2 class="display-6 fw-bold">Suivi du CAC40</h2>
                 <p class="fs-3">Ne perdez plus votre temps à rechercher l'information au sujet de vos actions particulières : contentez-vous de suivre l'indice de référence de la place de Paris.</p>
@@ -68,7 +68,7 @@
                 <p class="fs-2">Dopez vos investissements en profitant d'un effet de levier <span class="fw-bold">x2</span></p>
             </div>
         </article>
-        <article class="portfolio">
+        <article class="portfolio transparent-bg">
             <div class="container p-4 p-lg-5 px-lg-5 custom-card custom-card--teal text-center" id="portfolio">
                 <h2 class="display-6 fw-bold">Gestion de vos positions</h2>
                 <p class="fs-3">Ne perdez plus votre temps à rechercher l'information au sujet de vos actions particulières : contentez-vous de suivre l'indice de référence de la place de Paris.</p>
