--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,7 +3,11 @@
 {% block title %}WebTrader Homepage{% endblock %}
 
 {% block body %}
-
+    <a href="#top-of-page" class="svg-container reveal">
+        <svg width="64" height="64" viewBox="0 0 100 100">
+            <path fill="white" d="m50 0c-13.262 0-25.98 5.2695-35.355 14.645s-14.645 22.094-14.645 35.355 5.2695 25.98 14.645 35.355 22.094 14.645 35.355 14.645 25.98-5.2695 35.355-14.645 14.645-22.094 14.645-35.355-5.2695-25.98-14.645-35.355-22.094-14.645-35.355-14.645zm20.832 62.5-20.832-22.457-20.625 22.457c-1.207 0.74219-2.7656 0.57812-3.7891-0.39844-1.0273-0.98047-1.2695-2.5273-0.58594-3.7695l22.918-25c0.60156-0.61328 1.4297-0.96094 2.2891-0.96094 0.86328 0 1.6914 0.34766 2.293 0.96094l22.918 25c0.88672 1.2891 0.6875 3.0352-0.47266 4.0898-1.1562 1.0508-2.9141 1.0859-4.1133 0.078125z"></path>
+        </svg>
+    </a>
     <section class="py-5 mt-4">
         <div class="container">
             <div class="p-4 p-lg-5 custom-card custom-card--gradient text-center position-relative">
@@ -61,7 +65,7 @@
             </div>
         </article>
         <article>
-            <div class="container p-4 p-lg-5 px-lg-5 custom-card custom-card--light text-center" id="data">
+            <div class="container p-4 p-lg-5 px-lg-5 custom-card custom-card--light text-center reveal-btn" id="data">
                 <h2 class="display-6 fw-bold">Historique de données</h2>
                 <p class="fs-3">Ne perdez plus votre temps à rechercher l'information au sujet de vos actions particulières : contentez-vous de suivre l'indice de référence de la place de Paris.</p>
                 <p class="fs-2">Nous utilisons un <span class="fw-bold">tracker</span> qui réplique les variations du CAC40 à la hausse et à la baisse : c'est sur cet indice que les décisions d'investissement sont prises.</p>
