STYLE : modification du titre du tableau

--- a/assets/styles/table.scss
+++ b/assets/styles/table.scss
@@ -8,7 +8,9 @@
   min-width: 500px;
   &--title {
     background-color: #1a2e45;
-    color: #f1f2f3;
+    /* couleur à trancher : blanc ou bleu glacier ? */
+    /* color: #f1f2f3; */
+    color: #bad2ea;
     border-radius: 6px 6px 0 0;
     box-shadow: 0 0 15px rgba(70,70,70,0.5);
   }
