--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -43,6 +43,7 @@
             </button>
         </form>
         </div>
+        <a href="{{ path('app_forgot_password_request') }}">Mot de passe oublié ?</a>
     </div>
 </div>
 {% endblock %}
