Ajoute un formulaire d'enregistrement

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -41,7 +41,8 @@
             <button class="btn btn-lg mt-3 custom-btn" type="submit">
                 Valider
             </button>
-        </form>
+                <p>Pas encore de compte ? <a class="text-light" href="{{ path("app_register") }}">S'enregistrer</a></p>
+            </form>
         </div>
     </div>
 </div>
