--- a/templates/home/dashboard.html.twig
+++ b/templates/home/dashboard.html.twig
@@ -27,16 +27,18 @@
                             <th scope="col" class="text-center">ouverture</th>
                             <th scope="col" class="text-center">plus haut</th>
                             <th scope="col" class="text-center">plus bas</th>
+                            <th scope="col" class="text-center">clôture LVC</th>
                         </tr>
                         </thead>
                         <tbody class="custom-table--borderless">
-                        {% for row in cac %}
+                        {% for index, row in cac %}
                             <tr>
-                                <td class="text-center">{{ row.createdAt|date("d/m/y") }}</td>
+                                <td class="text-center">{{ row.createdAt | date("d/m/y") }}</td>
                                 <td class="text-center">{{ row.closing }}</td>
                                 <td class="text-center">{{ row.opening }}</td>
                                 <td class="text-center">{{ row.higher }}</td>
                                 <td class="text-center">{{ row.lower }}</td>
+                                <td class="text-center">{{ lvc[index].closing }}</td>
                             </tr>
                         {% endfor %}
                         </tbody>
