--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -4,10 +4,10 @@
 
 {% block body %}
 
-    <div class="container ">
+    <div class="container">
         <div class="row">
             <h1>Enregistrer un nouvel utilisateur</h1>
-            <div class="col-md">
+            <div class="col-6">
                 {{ form_start(registrationForm) }}
                 {{ form_row(registrationForm.email) }}
                 {{ form_row(registrationForm.plainPassword, {
@@ -15,7 +15,7 @@
                 }) }}
                 {{ form_row(registrationForm.agreeTerms) }}
 
-                <button type="submit" class="btn">S'enregistrer</button>
+                <button type="submit" class="btn btn-success">S'enregistrer</button>
                 {{ form_end(registrationForm) }}
             </div>
         </div>
