--- a/templates/home/dashboard.html.twig
+++ b/templates/home/dashboard.html.twig
@@ -31,14 +31,14 @@
                         </tr>
                         </thead>
                         <tbody class="custom-table--borderless">
-                        {% for index, row in cac %}
+                        {% for row in cacAndLvcData %}
                             <tr>
-                                <td class="text-center">{{ row.createdAt | date("d/m/y") }}</td>
+                                <td class="text-center">{{ row.created_at | date("d/m/y") }}</td>
                                 <td class="text-center">{{ row.closing }}</td>
                                 <td class="text-center">{{ row.opening }}</td>
                                 <td class="text-center">{{ row.higher }}</td>
                                 <td class="text-center">{{ row.lower }}</td>
-                                <td class="text-center">{{ lvc[index].closing }}</td>
+                                <td class="text-center">{{ row.lvc_closing }}</td>
                             </tr>
                         {% endfor %}
                         </tbody>
