--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -15,6 +15,8 @@
                     {% else %}
                         <li class="nav-item"><a class="nav-link px-lg-4" href="{{ path("app_login") }}"><i class="bi bi-person-circle pe-2 p-lg-2 wrap-icon"></i>Se connecter</a></li>
                     {% endif %}
+                    {# TODO : Déplacer l'icone à la fin du header et lancer l'animation au clic #}
+                    <box-icon type="hot" name="cog" size="md" animation="spin" color="#666160"></box-icon>
                 </ul>
             </div>
         </div>
