Ajoute une vérification sur l'utilisateur connecté en session

--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -16,7 +16,7 @@
                         <li class="nav-item"><a class="nav-link px-lg-4" href="{{ path("app_login") }}"><i class="bi bi-person-circle pe-2 p-lg-2 wrap-icon"></i>Se connecter</a></li>
                     {% endif %}
                     {# TODO : Déplacer l'icone à la fin du header et lancer l'animation au clic #}
-                    <box-icon type="hot" name="cog" size="md" animation="spin" color="#666160"></box-icon>
+                    <box-icon type="hot" name="cog" size="md" animation="spin" color="#cad2de"></box-icon>
                 </ul>
             </div>
         </div>
