--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -1,20 +1,33 @@
-<!-- Responsive navbar-->
-<!-- menu navbar placé dans un header pour améliorer le SEO qui prend en compte la sémantique -->
-<header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-1">
-        <div class="container px-lg-5">
-            <a class="navbar-brand" href="{{ path("app_home") }}">Webtrader</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+<!-- Récupère le nom de la route courante -->
+{% set current = app.request.attributes.get('_route') %}
+<header data-route-name="{{ current }}">
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary bg-gradient navbar-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand fw-bold" href="{{ path('app_home') }}">Webtrader</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-5 mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link {% if current == 'app_home' %}active{% endif %}" aria-current="page" href="{{ path('app_home') }}">Accueil</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link {% if current == 'app_dashboard' %}active{% endif %}" href="{{ path('app_dashboard') }}">Dashboard</a>
+                    </li>
+                </ul>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link" aria-current="page" href="{{ path("app_home") }}">Accueil</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{{ path("app_dashboard") }}">dashboard</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-                    {% if app.user %}
-                        <li class="nav-item"><a class="nav-link px-lg-4" href="{{ path("app_logout") }}"><i class="bi bi-person-circle pe-2 p-lg-2 wrap-icon"></i>Se déconnecter</a></li>
-                    {% else %}
-                        <li class="nav-item"><a class="nav-link px-lg-4" href="{{ path("app_login") }}"><i class="bi bi-person-circle pe-2 p-lg-2 wrap-icon"></i>Se connecter</a></li>
-                    {% endif %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="bi bi-person-fill"></i>
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="{{ path('app_login') }}"><i class="bi bi-box-arrow-in-left"></i> login</a></li>
+                            <li><a class="dropdown-item" href="{{ path('app_logout') }}"><i class="bi bi-box-arrow-right"></i> logout</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="#"><i class="bi bi-gear"></i> menu</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </div>
