Ajoute le tableau des cotations + traduit les infos de dataTables + réduit la largeur du dropdown menu
Je récupère l'ensemble des cotations et non plus les 10 plus récentes (gestion permise par les dataTables)

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -126,3 +126,8 @@ body {
     background-size: cover;
 }
 
+.custom-dropdown {
+    min-width: 80px !important;
+    max-width: 180px !important;
+}
+
