--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -18,10 +18,10 @@
                 </ul>
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="bi bi-person-fill"></i>
                         </a>
-                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                        <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end custom-dropdown" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="{{ path('app_login') }}"><i class="bi bi-box-arrow-in-left"></i> login</a></li>
                             <li><a class="dropdown-item" href="{{ path('app_logout') }}"><i class="bi bi-box-arrow-right"></i> logout</a></li>
                             <li><hr class="dropdown-divider"></li>
