--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -130,3 +130,11 @@ body {
     min-width: 80px !important;
     max-width: 180px !important;
 }
+
+.card {
+    box-sizing: border-box;
+}
+
+.no-margin {
+    margin: 0;
+}
