--- a/templates/home/dashboard.html.twig
+++ b/templates/home/dashboard.html.twig
@@ -3,14 +3,43 @@
 {% block title %}dashboard{% endblock %}
 
 {% block body %}
-<a href="#top-of-page" class="svg-container reveal">
-    <svg width="64" height="64" viewBox="0 0 100 100">
-        <path fill="white" d="m50 0c-13.262 0-25.98 5.2695-35.355 14.645s-14.645 22.094-14.645 35.355 5.2695 25.98 14.645 35.355 22.094 14.645 35.355 14.645 25.98-5.2695 35.355-14.645 14.645-22.094 14.645-35.355-5.2695-25.98-14.645-35.355-22.094-14.645-35.355-14.645zm20.832 62.5-20.832-22.457-20.625 22.457c-1.207 0.74219-2.7656 0.57812-3.7891-0.39844-1.0273-0.98047-1.2695-2.5273-0.58594-3.7695l22.918-25c0.60156-0.61328 1.4297-0.96094 2.2891-0.96094 0.86328 0 1.6914 0.34766 2.293 0.96094l22.918 25c0.88672 1.2891 0.6875 3.0352-0.47266 4.0898-1.1562 1.0508-2.9141 1.0859-4.1133 0.078125z"></path>
-    </svg>
-</a>
+<div class="row offset-lg-1">
+    <div class="col-lg-4 col-md-6">
+        <div class="card bg-success text-light mx-1 my-2">
+            <div class="card-header">
+                <h5 class="card-title fw-bolder">Positions en attente</h5>
+            </div>
+            <div class="card-body">
+                {% for position in waitingPositions %}
+                <p class="card-text no-margin text-center">+ {{ position.quantity }} LVC @ {{ position.lvcBuyTarget }} - CAC {{ position.buyTarget }} pts</p>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-4 col-md-6">
+        <div class="card bg-warning text-light mx-1 my-2">
+            <div class="card-header">
+                <h5 class="card-title fw-bolder">Positions en cours</h5>
+            </div>
+            <div class="card-body">
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-4 col-md-6">
+        <div class="card bg-danger text-light mx-1 my-2">
+            <div class="card-header">
+                <h5 class="card-title fw-bolder">Positions clôturées</h5>
+            </div>
+            <div class="card-body">
+                <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="row">
-    <div class="col-lg-6 col-md-8 col-sm-12">
-        <div class="flex-row m-5">
+    <div class="mt-5 ms-auto col-lg-5 col-md-8 col-sm-12 g-0">
+        <div class="flex-row">
             <div class="custom-table--title text-center p-1">cotations du CAC40</div>
             <table id="data" class="table-bordered table-striped table-hover table-secondary">
                 <thead>
@@ -48,7 +77,7 @@
             </table>
         </div>
     </div>
-    <div class="col-md-6">
+    <div class="col-xl-5 col-md-6 me-1 g-0">
         <div class="card chart_card m-md-5">
             <div class="card-header custom-table--title text-center p-1">Graphique du Cac</div>
             <div class="card-body">
@@ -56,7 +85,7 @@
             </div>
         </div>
     </div>
-    ajout d'un élément vide pour servir de support à la classe reveal-btn permettant d'afficher le scroll-up
+    <!-- ajout d'un élément vide pour servir de support à la classe reveal-btn permettant d'afficher le scroll-up -->
     <div class="reveal-btn"></div>
 </div>
 {% endblock %}
